# domain-typed-lisp

./: .dtl-selfdoc.toml  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md
.github/: CLAUDE.md
benches/: CLAUDE.md  perf_scaling.rs
docs/: CLAUDE.md  adt-parametric-evaluation-v0.3.md  architecture-v0.2.md  example-scenarios-ja.md  formalization-bootstrap.md  formalization-roadmap.md  formalization-theorem-inventory.md  language-guide-ja.md  language-spec.md  migration-v0.2.md  multi-file-minimal-design.md  mvp-goal.md  self-proof-criteria.md  semantics-core-v0.6.md  termination-analysis-v0.3.md  test-matrix.md  troubleshooting-errors-ja.md  verification-plan.md  versioning-policy.md
docs-site/: CLAUDE.md  book.toml
editors/: CLAUDE.md
examples/: CLAUDE.md  access_control_import_entry.dtl  access_control_ng_unknown_relation.dtl  access_control_ok.dtl  access_control_split_policy.dtl  access_control_split_schema.dtl  catalog.tsv  complex_policy_import_entry.dtl  complex_policy_rules.dtl  complex_policy_schema.dtl  customer_contract_ja.dtl  my_first_policy.dtl  recursive_nested_ok.dtl  recursive_totality_ok.dtl  semantic_dup_advanced.dtl  semantic_dup_function_param.dtl
scripts/: CLAUDE.md  docs-site-build.sh  docs-site-serve.sh  generate-examples-catalog.sh  generate-glossary-assets.py
src/: CLAUDE.md  ast.rs  diagnostics.rs  fmt.rs  lib.rs  lint.rs  logic_engine.rs  main.rs  name_resolve.rs  parser.rs  prover.rs  reference_prover.rs  selfdoc.rs  stratify.rs  typecheck.rs  types.rs
tests/: CLAUDE.md  differential_logic_engine.rs  (+27 more)
(+78 files in other folders)
