[package]
name = "dtl"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
datafrog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-normalization = "0.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
proptest = "1.6"
tempfile = "3.10"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "perf_scaling"
harness = false
